# STC-Server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TECHNICAL_DOCUMENTATION.md  alksjfal  docker-compose.yml  invoice.xml  plan-auth-and-rate-limiting.md  test-csr.sh  test.json  test.sh  test101.xml  test_onboard.sh  test_result.json  todo.md
.sqlx/: query-083ea6298bae334dc0e9354059f8e62354fb1b3a33dc77b2e2286163e5e59bf4.json  query-0920366d4f97a286828961d9346a24093cad8b44d55fa7dd0e4daf5abfe97e2a.json  query-0ceded0d5649266fb9851df197ab9c3ba045a69befb1d7782e6d95a180fe42d2.json  query-0cef259545b3d34ceecec227fd07929c925c5f6cadda228a719cdeacd10d69cd.json  query-104f0664ffc2bc5f7e8aebd4209f774697f0dee4da899c8ffb55c2bc8526939d.json  query-19ddf0b549fe0e5cdc19e8c8a1f46a264efd3d3701ebbfe7efde69b7b67b3e35.json  query-510341887382a4bac25a7d3fd6570ff85e469b0d3d89f466f7246e6abbc13e3f.json  query-5b64c5692a9cd1dfc2eac1b2f5c117a062a9bd9808d9981d95e89e61dd2bbd29.json  query-62b19ba34702c9240bb423d5d67f40ad02ed9e4c733ad0fcca8141de24b977ce.json  query-649a79357b3e55060a3a36c8a7594ae6b269fe440c77c8733f5d1515944bb9a1.json  query-65446ddc5d9219a711539f55246b8065a64fab53a8db0e6e090a0487e9957098.json  query-6f270051b294e2b4f2c890381b668541bb14e2e2af78233f22c14672a4f393ad.json  query-8dcad0cc244c00fdc7f0268c9ba33e4292e7704b2199307dffc07fbb3493d474.json  query-a8a85124117c799f8a98fce73efc3cb53195749e20ac82f3ad56238c3f059a66.json  query-ba0be1e85ee3b1a05bcd18ff1633fa15a3aa9024d7947283dd67d3e9dc2b4451.json  query-be2c32a98575aa4c12c3a4e1257e53eeffee31841130cf7e2a81b9a4fb7fff69.json  query-bf9a831b722a559ef1dee9a8548d8022eb7623e43df4bc29bfacde001015f8f1.json  query-c7c08502e3e6b77e6bfb499775d3a2034bdc6b813ac05c450c7d6e8cdc022c92.json  query-d7971d6e368de0a3390656fb40323f7f7ce7cf70952a9bf021e044081deb78c3.json  (+2 more)
migrations/: 20251210201554_create_submission_table.sql  (+17 more)
src/: docs.rs  (+5 more)
(+98 files in other folders)
