[package]
name = "stc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
quick-xml = { version = "0.38.4", features = ["serialize"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
serde_json = "1.0.145"
