[profile.release]
panic = "unwind"
[package]
name = "stc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
quick-xml = { version = "0.39.2", features = ["serialize"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres","uuid","time","chrono"] }
serde_json = "1.0.149"
base64 = "0.22.1"
openssl = "0.10.76"
hex = "0.4.3"
xml_c14n = "0.3.0"
time = { version = "0.3", features = ["serde"] }
chrono = "0.4.44"
anyhow = "1.0.102"
uuid = {version ="1.23.0",features=["serde","v4"]}
include_dir = "0.7"
tempfile = "3.27"
# libxml = "0.3.8"
flamegraph = {version = "0.6.12", features = []}
tracing = "0.1.44"
tracing-actix-web = "0.7"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
fastxml ="0.8.1"
argon2 = "0.5"
